feat: add quick search buttons /pin and /yt for platform switching

--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,16 @@
   <div class="container">
     <div class="glass-blob" aria-hidden="true"></div>
 
+    <!-- Quick Search Buttons -->
+    <div class="quick-search-buttons">
+      <button class="quick-btn active" data-type="youtube" title="YouTube Search">
+        /yt
+      </button>
+      <button class="quick-btn" data-type="pinterest" title="Pinterest Search">
+        /pin
+      </button>
+    </div>
+
     <h1>Download Video & Audio - Tools Premium</h1>
 
     <div
