--- a/public/index.html
+++ b/public/index.html
@@ -132,10 +132,12 @@
     </div>
 
     <div class="input-group">
-      <button class="search-type-toggle" id="searchTypeToggle" data-type="youtube" title="Click to switch">
-        /yt
-      </button>
-      <input type="text" id="urlInput" placeholder="Paste YouTube, TikTok, Instagram, or Spotify link..." />
+      <div class="input-wrapper">
+        <button class="search-type-toggle" id="searchTypeToggle" data-type="youtube" title="Click to switch">
+          /yt
+        </button>
+        <input type="text" id="urlInput" placeholder="Paste YouTube, TikTok, Instagram, or Spotify link..." />
+      </div>
       <button id="fetchBtn">Download</button>
     </div>
 
