--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,17 @@
 
     <div class="result"></div>
 
+    <!-- History Modal -->
+    <div id="historyModal" class="modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 1000; align-items: center; justify-content: center;">
+        <div class="modal-content" style="background: white; width: 90%; max-width: 500px; max-height: 80vh; overflow-y: auto; border-radius: 10px; padding: 20px; position: relative;">
+            <span class="close-modal" style="position: absolute; top: 10px; right: 15px; font-size: 24px; cursor: pointer;">&times;</span>
+            <h2 style="margin-top: 0; margin-bottom: 15px; color: #333;">Download History</h2>
+            <div id="historyList" class="history-list">
+                <p>Loading...</p>
+            </div>
+        </div>
+    </div>
+
     <!-- Popup notification -->
     <div id="popup" class="popup"></div>
 
