--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,19 @@
 </head>
 
 <body>
+  <div id="authSection" style="position: fixed; top: 16px; right: 16px; z-index: 2000; display: flex; align-items: center; gap: 10px;">
+    <a id="loginBtn" href="/api/auth?action=login" style="display: inline-flex; align-items: center; gap: 8px; background: #333; color: #fff; padding: 6px 12px; border-radius: 20px; text-decoration: none; font-size: 13px;">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+        <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1-.02-1.96-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.09-.745.083-.73.083-.73 1.205.084 1.71 1.236 1.71 1.236 1.07 1.835 2.807 1.305 3.492.998.108-.775.418-1.305.762-1.605-2.665-.3-5.467-1.332-5.467-5.93 0-1.31.468-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.43.37.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"/>
+      </svg>
+      <span>Login via GitHub</span>
+    </a>
+    <div id="userSection" style="display: none; align-items: center; gap: 8px;">
+      <span id="usernameDisplay" style="font-weight: 600; color: #333;"></span>
+      <button id="historyBtn" style="background: #667eea; color: white; border: none; padding: 6px 10px; border-radius: 16px; font-size: 12px; cursor: pointer;">History</button>
+      <button id="logoutBtn" style="background: #ff6b6b; color: white; border: none; padding: 6px 10px; border-radius: 16px; font-size: 12px; cursor: pointer;">Logout</button>
+    </div>
+  </div>
   <div class="container">
     <div class="glass-blob" aria-hidden="true"></div>
 
