--- a/public/index.html
+++ b/public/index.html
@@ -69,10 +69,15 @@
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 
+  <!-- Preload Critical Assets -->
+  <link rel="preload" href="./images/snoopy-white.jpg" as="image" />
+  <link rel="preload" href="./images/snoopy-dark.jpg" as="image" media="(prefers-color-scheme: dark)" />
+
   <!-- Stylesheet with cache busting -->
-  <link rel="stylesheet" href="style.css?v=20260112">
+  <link rel="stylesheet" href="style.css?v=20260209">
 
   <!-- Cloudflare Turnstile Script -->
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
@@ -223,7 +228,7 @@
     </div>
   </div>
 
-  <script src="script.js?v=20260112"></script>
+  <script src="script.js?v=20260209" defer></script>
 
   <!-- Service Worker Registration -->
   <script>
@@ -234,7 +239,7 @@
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/service-worker.js')
           .then((registration) => {
-            console.log('✅ Service Worker registered successfully:', registration.scope);
+            // Service Worker registered successfully
 
             // Check for updates periodically
             setInterval(() => {
@@ -255,13 +260,12 @@
             });
           })
           .catch((error) => {
-            console.error('❌ Service Worker registration failed:', error);
+            // Service Worker registration failed - silent fail
           });
 
         // Listen for messages from service worker
         navigator.serviceWorker.addEventListener('message', (event) => {
           if (event.data && event.data.type === 'NEW_VERSION_AVAILABLE') {
-            console.log('🔔 New version available:', event.data.version);
             showUpdateNotification();
           }
         });
@@ -269,7 +273,6 @@
         // Handle controller change (new SW activated)
         navigator.serviceWorker.addEventListener('controllerchange', () => {
           if (newWorkerAvailable) {
-            console.log('🔄 New service worker activated, reloading page...');
             window.location.reload();
           }
         });
