add instagram metadata display (username, likes, views, comments, thumbnail)

--- a/public/donate.html
+++ b/public/donate.html
@@ -173,7 +173,7 @@
         }
 
         .side-menu.active {
-            left: 0 !important;
+            left: 0;
         }
 
         .side-menu-overlay {
@@ -649,7 +649,7 @@
 
                 <div class="qris-container">
                     <!-- Replace this placeholder with your actual QRIS image -->
-                    <img src="/images/qris/qris.jpg" alt="QRIS Code" class="qris-image"
+                    <img src="/images/qris.png" alt="QRIS Code" class="qris-image"
                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="qris-placeholder" style="display: none;">
                         <span>QRIS Image<br>Coming Soon</span>
