--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
   <link rel="preload" href="./images/snoopy-dark.jpg" as="image" media="(prefers-color-scheme: dark)" />
 
   <!-- Stylesheet with cache busting -->
-  <link rel="stylesheet" href="style.css?v=20260209-v2">
+  <link rel="stylesheet" href="style.css?v=20260209-menu">
 
   <!-- Cloudflare Turnstile Script -->
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
