--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- Cache Control Headers -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
+  <!-- Cache Control is handled by server headers -->
 
   <!-- Content Security Policy for Cloudflare Turnstile -->
   <meta http-equiv="Content-Security-Policy"
@@ -73,8 +70,8 @@
   <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 
   <!-- Preload Critical Assets -->
-  <link rel="preload" href="./images/snoopy-white.jpg" as="image" />
-  <link rel="preload" href="./images/snoopy-dark.jpg" as="image" media="(prefers-color-scheme: dark)" />
+  <link rel="preload" href="./images/snoopy-white.webp" as="image" />
+  <link rel="preload" href="./images/snoopy-dark.webp" as="image" media="(prefers-color-scheme: dark)" />
 
   <!-- Stylesheet with cache busting -->
   <link rel="stylesheet" href="style.css?v=20260209-menu">
