fix biar hijau semua

--- a/public/donate.html
+++ b/public/donate.html
@@ -33,7 +33,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             min-height: 100vh;
-            background-image: url('./images/snoopy-white.jpg');
+            background-image: url('./images/snoopy-white.webp');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -52,7 +52,7 @@
             --text-secondary: rgba(235, 235, 245, 0.8);
             --blob-color-1: rgba(10, 132, 255, 0.4);
             --blob-color-2: rgba(94, 92, 230, 0.4);
-            background-image: url('./images/snoopy-dark.jpg');
+            background-image: url('./images/snoopy-dark.webp');
         }
 
         /* Animated Liquid Blobs */
@@ -649,11 +649,7 @@
 
                 <div class="qris-container">
                     <!-- Replace this placeholder with your actual QRIS image -->
-                    <img src="/images/qris.png" alt="QRIS Code" class="qris-image"
-                        onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="qris-placeholder" style="display: none;">
-                        <span>QRIS Image<br>Coming Soon</span>
-                    </div>
+                    <img src="/images/qris/qris.jpg" alt="QRIS Code" class="qris-image">
                 </div>
 
                 <p class="qris-label">Powered by QRIS Indonesia</p>
