--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
     </div>
   </div>
 
-  <script src="script.js?v=20260209-2" defer></script>
+  <script src="script.js?v=20260213-generic" defer></script>
 
   <!-- Service Worker Registration -->
   <script>
